# ThinkUtils

./: .eslintignore  .eslintrc.json  .gitignore  .htmlhintrc  .lintstagedrc.json  .prettierignore  .stylelintrc.json  CLAUDE.md  CNAME  GOOGLE_OAUTH_SETUP.md  ICON_GENERATION.md  LICENSE  README.md  generate-icons.sh  index.html  install-polkit.sh  package-lock.json  package.json  setup-dependencies.sh  setup-passwordless.sh  thinkutils.desktop  ubuntu-installer.sh
.husky/: pre-commit
apt/: InRelease  Packages  Release  Release.gpg  index.html  thinkutils-archive-keyring.asc
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: gen-packaging.rs
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  battery.rs  environment.rs  fan_control.rs  fan_curve.rs  hardware_root.rs  hwmon.rs  lib.rs  linux_webkit.rs  main.rs  mcp.rs  monitor.rs  performance.rs  permissions.rs  privileged.rs  security.rs  settings.rs  sync.rs  system_info.rs
src-tauri/tests/: distro_detection.rs  hardware_profiles.rs  packaging.rs  release_asset_names.rs  synthetic_hardware.rs  threshold_attribute_names.rs  workflow_concurrency.rs
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/: README.md  hwmon-map.txt  machine.txt
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/proc/acpi/ibm/: fan
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/class/hwmon/hwmon5/: name
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/class/hwmon/hwmon7/: temp9_label
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/platform/USBC000:00/power_supply/ucsi-source-psy-USBC000:001/: uevent  usb_type
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/platform/USBC000:00/power_supply/ucsi-source-psy-USBC000:002/: uevent
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/platform/coretemp.0/hwmon/hwmon7/: temp8_label
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/virtual/thermal/thermal_zone1/: type
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/virtual/thermal/thermal_zone2/: type
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/virtual/thermal/thermal_zone3/: type
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/virtual/thermal/thermal_zone4/: type
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/virtual/thermal/thermal_zone5/: type
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/virtual/thermal/thermal_zone6/: type
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/virtual/thermal/thermal_zone7/: type
src-tauri/tests/fixtures/hardware/thinkpad-p1-gen-4i/sys/devices/virtual/thermal/thermal_zone8/: type
src-tauri/tests/fixtures/os-release/: README.md  arch  linuxmint-21  opensuse-tumbleweed
(+106 files in other folders)
