[package]
name = "thinkutils"
version = "0.1.10"
description = "ThinkPad utilities for Linux - Fan control, battery management, and system monitoring"
authors = ["Viet Anh Nguyen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thinkutils_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
oauth2 = "5"
url = "2.5"
tiny_http = "0.12"
rand = "0.8"
lazy_static = "1.4"
# rmcp 2.x. The SSE server transport was removed upstream; Streamable HTTP is
# the only server transport now, and it is also where RUSTSEC-2026-0189's fix
# landed -- allowed_hosts/allowed_origins, which is what closes the DNS-rebinding
# and cross-origin CSRF vector against loopback.
rmcp = { version = "2", features = ["server", "server-side-http", "transport-streamable-http-server", "macros", "schemars"] }
schemars = "0.8"
tokio-util = "0.7"
axum = "0.8.9"

